tests/bad/OverlappingType.ml
(* [ISSUE] (Out of scope) Fix me. *)
type 'a list =
  | List of 'a * 'a list
  | Nil
